A.F....... [ZBX-4311] fixed graph prototype name validation (pavels)
A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)

Bug fixes:
..F....... [ZBX-4436] fixed wrong sql query in discovery popup (SlaVa)
....I..... [ZBX-4429] fixed problem with wrong mysql comment tag and warning in mysql function when  update to 1.9.8 (SlaVa)
........S. [ZBX-4418] fixed possible SQL errors while processing of time functions (Sasha)
..F....... [ZBX-4336] fixed problem with item status clearing when changing  to active in frontend (SlaVa)
A.F....... [ZBX-4260] replaced event sorting by 'clock' with 'eventid' (pavels)
..F....... [ZBX-4381] fixed permission check in SLA reports (pavels)
..F....... [ZBX-4411] remade the zbx_stripos() function whithout the use of mb_stripos() (pavels)
..F....... [ZBX-4015] fixed multiple XSS issues (pavels)
..F....... [ZBX-4334] changed disabled triggers and scenarios to be shown by default (sanja)
A......... [ZBX-4403] fixed low level discovery rule creation (pavels)
..F.I...S. [ZBX-3832] removed support of aggregated graph items (pavels, Sasha)
..F....... [ZBX-4235] fixed operations with decimal numbers for certain locales (pavels)
A.F....... [ZBX-4382] fixed missing dates in the midle of graph axis (sanja)
A.F....... [ZBX-3366] fixed API sorting (Eduard)

--------------------------------------------------------------------------------
Changes for 1.9.8

New features:
 - [ZBX-3104] implemented the screen item API (pavels)
 - [ZBXNEXT-913] redesign Configuration->IT Services (Eduard)
 - [ZBXNEXT-907] redesign Configuration->Applications (Eduard)
 - [ZBX-3271] implemented the _x() and _xn() function for context dependent translations (pavels, Richlv, Vedmak)