@@ -22,15 +22,16 @@
 //require_once 'Framework/ClassTest.php';
 //require_once(dirname(__FILE__).'/classes/class.cdrule.php');
 require_once(dirname(__FILE__).'/classes/class.triggerexpressionTest.php');
+require_once(dirname(__FILE__).'/classes/class.citemtest.php');
 // ...
-
 //class Package_GeneralTests
 class ApiTests
 {
 	public static function suite()
 	{
-		$suite = new PHPUnit_Framework_TestSuite('api');
+		$suite = new PHPUnit_Framework_TestSuite();
 		$suite->addTestSuite('class_triggerexpressionTest');
+		$suite->addTestSuite('CItemTest');
 //		$suite->addTestSuite('CDRuleTest');
 
 		return $suite;
